--- a/index.html
+++ b/index.html
@@ -15,86 +15,76 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Cormorant+Unicase:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- <main> -->
-    <div class="image-frame cover" style="background-image: url('img/image-52.jpg');">
-      <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
-    </div>
-    <p>I offer psychological support for individuals as part of my training in counselling.</p>
-    <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone, or video call, in English or German.<p>
-    <hr>
-    <img src="img/profile2.jpg" class="profile" />
+  <div class="image-frame cover" style="background-image: url('img/image-52.jpg');">
+    <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
+  </div>
+  <p>I offer psychological support for individuals as part of my training in counselling.</p>
+  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone, or video call, in English or German.<p>
+  <hr>
+  <img src="img/profile2.jpg" class="profile" />
 
-    <h3>How it can help:</h3>
-    <ul>
-      <li>Talk through something spontaneously, get a second opinion</li>
-      <li>Take some pressure off partners, friends or family</li>
-      <li>Discuss things you don't have time or space for elsewhere</li>
-    </ul>
-    <hr>
+  <h3>How it can help:</h3>
+  <ul>
+    <li>Talk through something spontaneously, get a second opinion</li>
+    <li>Take some pressure off partners, friends or family</li>
+    <li>Discuss things you don't have time or space for elsewhere</li>
+  </ul>
+  <hr>
 
-    <h3>We can talk about:</h3>
-    <ul>
-      <li>Relationships: conflict, dynamics, difficult conversations, needs and boundaries, attachment styles, communication, separation</li>
-      <li>Work: difficult dynamics or environments, conflicts, communication, productivity, personal development; questions about vocation and finding meaningful work</li>
-      <li>Coping with death, illness, grief and loss</li>
-      <li>Spirituality: philosophical reflection, ritual, meditation, transcendence experiences; integrating a religious upbringing</li>
-      <li>Creativity, self-expression, artistic practice: writing, art, music</li>
-      <!-- <li>Your personal symbolic language and root metaphors.</li>
-      <li>Dream work and dream analysis: understanding one's own symbolic language.</li> -->
-    </ul>
-    <hr>
-    <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
-      It's <em>not coaching</em>: it's not goal-oriented, we work with what <em>is</em>.
-    <hr>
-    <h2>Fees</h2>
-    <p>0&mdash;50€ per session (50 minutes) — based on what you can afford.<br/>
-      Our first session is free.
-    </p>
-    <hr>
-    <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-    <hr>
-    <div class="image-frame cover" style="background-image: url('img/image-54.jpg');">
-    </div>
-    <h2 id="about">About</h2>
-    <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
-    <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
-    <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
-    <hr>
-    <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-    <hr>
-    <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
-    <h2 id="approach">Approach</h2>
-    <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
-    <p>I work with the following basic principles:</p>
-    <ul>
-      <li>"The talking cure": talking through one's thoughts and feelings, with an interested, objective person, is therapeutic in itself.</li>
-      <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
-      <li>Recognising and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
-    </ul>
+  <h3>We can talk about:</h3>
+  <ul>
+    <li><em>Relationships</em>: conflict, communication, needs and boundaries, separation</li>
+    <li><em>Work</em>: difficult dynamics, conflicts, unemployment, questions about vocation and finding meaningful work</li>
+    <li><em>Grief</em>: coping with death, illness, and loss</li>
+    <li><em>Spirituality</em>: philosophical reflection, ritual, meditation, integrating a religious upbringing</li>
+    <li><em>Creativity</em>: self-expression, artistic practice</li>
+    <li><em>Dreams</em>: working with significant dreams, understanding your own symbolic language</li>
+  </ul>
+  <hr>
+  <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
+    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what <em>is</em>.
+  <hr>
+  <h2>Fees</h2>
+  <p>0&mdash;50€ per session (50 minutes) — based on what you can afford.<br/>
+    Our first session is free.
+  </p>
+  <hr>
+  <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <hr>
+  <div class="image-frame cover" style="background-image: url('img/image-54.jpg');">
+  </div>
+  <h2 id="about">About</h2>
+  <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
+  <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
+  <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
+  <!-- <hr>
+  <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <hr> -->
+  <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
+  <h2 id="approach">Approach</h2>
+  <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
+  <p>I work with the following basic principles:</p>
+  <ul>
+    <li>"The talking cure": talking through one's thoughts and feelings, with an interested, objective person, is therapeutic in itself.</li>
+    <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
+    <li>Recognising and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
+  </ul>
 
-    <p>I also co-facilitate a regular dream work group.</p>
+  <hr>
+  <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <hr>
 
-    <!--
-    <p>The following schools and theories influence my work: depth psychology, psychodynamics, psychoanalysis; Jungian/analytical/archetypal psychology; Developmental psychology and object-relations theory; dream work; Attachment theory; Logotherapy (Frankl); Individual psychology (Adler), Lacan; Art therapy and music therapy; Meditation and mindfulness; Stoicism; Taoist and Buddhist philosophy, comparative religion in general.</p>
-    -->
-
-    <hr>
-    <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-    <hr>
-
-    <div class="image-frame" style="background-image: url('img/image-61.jpg');, background-position: center;"></div>
-    <h3>Safety</h3>
-    <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
-    <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
-    <ul>
-      <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/></li>
-      <li><a href="https://krisenchat.de/en">Krisenchat</a><br/></li>
-      <li><a href="https://complicated.life">It's Complicated</a><br/></li>
-      <li><a href="https://www.samaritans.org/">Samaritans</a><br/></li>
-    </ul>
-    <hr>
-    <!-- <div class="image-frame" style="background-image: url('img/image-60.jpg');, background-position: center;"></div> -->
-  <!-- </main> -->
+  <div class="image-frame" style="background-image: url('img/image-61.jpg');, background-position: center;"></div>
+  <h3>Safety</h3>
+  <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
+  <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
+  <ul>
+    <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/></li>
+    <li><a href="https://krisenchat.de/en">Krisenchat</a><br/></li>
+    <li><a href="https://complicated.life">It's Complicated</a><br/></li>
+    <li><a href="https://www.samaritans.org/">Samaritans</a><br/></li>
+  </ul>
+  <hr>
 </body>
 </html>
 
