--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <ul>
     <li>Talk through something spontaneously, get a second opinion</li>
     <li>Take some pressure off partners, friends or family</li>
-    <li>Discuss things you don't have time or space for elsewhere</li>
+    <li>Talk about something you don't have time or space for elsewhere</li>
   </ul>
   <hr>
 
@@ -45,7 +45,7 @@
     It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what <em>is</em>.
   <hr>
   <h2>Fees</h2>
-  <p>0&mdash;50€ per session (50 minutes) — based on what you can afford.<br/>
+  <p>0&mdash;50€ per session (50 minutes), based on what you can afford.<br/>
     Our first session is free.
   </p>
   <hr>
@@ -55,11 +55,8 @@
   </div>
   <h2 id="about">About</h2>
   <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
-  <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by Taoism, Buddhism, Stoicism and comparative religion in general.</p>
+  <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by eastern/ancient thought systems and comparative religion in general.</p>
   <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
-  <!-- <hr>
-  <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  <hr> -->
   <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
   <h2 id="approach">Approach</h2>
   <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
