--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   <div class="image-frame cover" style="background-image: url('img/image-52.jpg');">
     <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
   </div>
-  <p>I offer psychological support for individuals as part of my training in counselling.</p>
-  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone, or video call, in English or German.<p>
-  <hr>
   <img src="img/profile2.jpg" class="profile" />
+  <p>I offer psychological support for individuals as part of my training in counselling.</p>
+  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone or online, in English or German.<p>
+  <hr>
+  
 
   <h3>How it can help:</h3>
   <ul>
@@ -42,7 +43,7 @@
   </ul>
   <hr>
   <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
-    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what <em>is</em>.
+    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.
   <hr>
   <h2>Fees</h2>
   <p>0&mdash;50€ per session (50 minutes), based on what you can afford.<br/>
@@ -51,7 +52,7 @@
   <hr>
   <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-  <div class="image-frame cover" style="background-image: url('img/image-54.jpg');">
+  <div class="image-frame cover" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
   <h2 id="about">About</h2>
   <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
@@ -71,7 +72,7 @@
   <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
 
-  <div class="image-frame" style="background-image: url('img/image-61.jpg');, background-position: center;"></div>
+  <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
   <h3>Safety</h3>
   <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
   <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
