--- a/index.html
+++ b/index.html
@@ -15,42 +15,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,500;0,700;1,500;1,700&family=Cormorant+Unicase:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="image-frame cover" style="background-image: url('img/image-52.jpg');">
+  <div class="cover image-frame" style="background-image: url('img/image-52.jpg');">
     <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
   </div>
   <img src="img/profile2.jpg" class="profile" />
-  <p>I offer psychological support for individuals as part of my training in counselling.</p>
-  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone or online, in English or German.<p>
+  <p>I offer psychological support for individuals, in English or German, as part of my training in counselling.</p>
+  <!-- <hr> -->
+  <h3>We can talk about:</h3>
+  <p>Conflict, Communication, Creativity, Death, Family, Grief, Illness, Needs/boundaries, Loss, Relationships, Separation, Stress, Unemployment, Work</p>
   <hr>
-  
-
+  <h3>Fees</h3>
+  <p>0&mdash;50€ per session, income-based. First conversation is free.<br/>
+  While in training I work under supervision.</p>
+  <hr>
+  <p class="cta">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <hr>
   <h3>How it can help:</h3>
   <ul>
-    <li>Talk through something spontaneously, get a second opinion</li>
-    <li>Take some pressure off partners, friends or family</li>
+    <li>Work through a long-term problem</li>
+    <li>Talk through a recent experience, get a second opinion</li>
+    <li>Take pressure off partners, friends or family</li>
     <li>Talk about something you don't have time or space for elsewhere</li>
   </ul>
   <hr>
-
-  <h3>We can talk about:</h3>
-  <ul>
-    <li><em>Relationships</em>: conflict, communication, needs and boundaries, separation</li>
-    <li><em>Work</em>: difficult dynamics, conflicts, unemployment, questions about vocation and finding meaningful work</li>
-    <li><em>Grief</em>: coping with death, illness, and loss</li>
-    <li><em>Spirituality</em>: philosophical reflection, ritual, meditation, integrating a religious upbringing</li>
-    <li><em>Creativity</em>: self-expression, artistic practice</li>
-    <li><em>Dreams</em>: working with significant dreams, understanding your own symbolic language</li>
-  </ul>
-  <hr>
+  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone or online.<p>
   <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
     It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.
   <hr>
-  <h2>Fees</h2>
-  <p>0&mdash;50€ per session (50 minutes), based on what you can afford.<br/>
-    Our first session is free.
-  </p>
-  <hr>
-  <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
   <div class="image-frame cover" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
@@ -69,7 +61,7 @@
   </ul>
 
   <hr>
-  <p style="text-align: center;">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p  class="cta">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
 
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
