Update topic list

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <p>I offer psychological support for individuals, in English or German, as part of my training in counselling.</p>
   <!-- <hr> -->
   <h3>We can talk about:</h3>
-  <p>Conflict, Communication, Creativity, Death, Family, Grief, Illness, Needs/boundaries, Loss, Relationships, Separation, Stress, Unemployment, Work</p>
+  <p>Anxiety, Conflict, Communication, Creativity, Death, Family, Grief, Illness, Needs/boundaries, Loss, Relationships, Separation, Stress, Unemployment, Work</p>
   <hr>
   <h3>Fees</h3>
   <p>0&mdash;50€ per session, income-based. First conversation is free.<br/>
