--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <p>Anxiety, Conflict, Communication, Creativity, Death, Family, Grief, Illness, Needs/boundaries, Loss, Relationships, Separation, Stress, Unemployment, Work</p>
   <hr>
   <h3>Fees</h3>
-  <p>0&mdash;50€ per session, income-based. First conversation is free.<br/>
+  <p>0&mdash;50€ per session, income-based. Our first conversation is free.<br/>
   While in training I work under supervision.</p>
   <hr>
-  <p class="cta">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
   <h3>How it can help:</h3>
   <ul>
@@ -42,7 +42,7 @@
   <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
     It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.
   <hr>
-  <p class="cta">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
   <div class="image-frame cover" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
@@ -61,7 +61,7 @@
   </ul>
 
   <hr>
-  <p  class="cta">Write a short message to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p  class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
 
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
