Update text, add DE version

--- a/index-de.html
+++ b/index-de.html
@@ -19,31 +19,36 @@
     <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
   </div>
   <img src="img/profile2.jpg" class="profile" />
-  <p>I offer psychological support for individuals, in English or <a href="index-de.html">German</a>, as part of my training in counselling.</p>
+  <p>Im Rahmen meiner Weiterbildung in Beratung biete ich psychologische Unterstützung für Einzelpersonen an.</p>
   <!-- <hr> -->
-  <h3>We can talk about:</h3>
-  <p>Anxiety, conflict, communication, creativity, death, family, grief, illness, needs/boundaries, loss, relationships, separation, stress, unemployment, work, etc.</p>
+  <h3>Können wir besprechen:</h3>
+  <p>Angst, Arbeit, Arbeitslosigkeit, Bedürfnisse/Grenzen, Beziehungen, Familie, Krankheit, Konflikte, Kommunikation, Kreativität, Stress, Tod, Trauer, Trennung, Verlust, usw.</p>
   <hr>
-  <h3>Fees</h3>
-  <p>0&mdash;50€ per session, income-based. Our first conversation is free.<br/>
-  While in training I work under supervision.</p>
+  <h3>Preise</h3>
+  <p>0 bis 50€ pro Sitzung, einkommensabhängig. Erstes Gespräch ist kostenlos.<br/>
+  Während der Weiterbildung arbeite ich unter Anleitung.</p>
+
+
+0-50€ pro Sitzung, einkommensabhängig. Unser erstes Gespräch ist kostenlos.
+Während der Ausbildung arbeite ich unter Supervision.
   <hr>
-  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-  <h3>How it can help:</h3>
+  <h3>Wie es helfen kann:</h3>
   <ul>
-    <li>Work through a long-term problem</li>
-    <li>Talk through a recent experience, get a second opinion</li>
-    <li>Take pressure off partners, friends or family</li>
-    <li>Talk about something you don't have time or space for elsewhere</li>
+    <li>Bewältigung eines Langzeitproblems</li>
+    <li>Über eine kürzlich gemachte Erfahrung sprechen, eine zweite Meinung einholen</li>
+    <li>Entlastung von Partnern, Freunden und Familie</li>
+    <li>Gespräch über Dinge, für die man sonst keine Zeit oder keinen Platz hat</li>
   </ul>
   <hr>
-  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone or online.<p>
-  <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
-    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.</p>
+  <p>Ein vertraulicher 1:1-Raum zum Zuhören, Nachdenken und Reflektieren; Gespräche am Telefon oder online.A<p>
+  <!-- <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
+    It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.</p> -->
   <hr>
-  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
+  <!--
   <div class="image-frame cover" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
   <h2 id="about">About</h2>
@@ -61,13 +66,13 @@
   </ul>
 
   <hr>
-  <p  class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p  class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-
+  -->
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
-  <h3>Safety</h3>
-  <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
-  <p>If you are in an acute crisis, or someone is in danger, please contact a fully-trained professional:</p>
+  <h3>Sicherheit</h3>
+  <p>Ich habe noch keine Akkreditierung als Berater/in. Während der Weiterbildung arbeite ich unter Supervision. Die Gespräche sind als Ergänzung zu einer professionellen Psychotherapie, als leichter zugängliche Alternative oder als Schritt auf dem Weg zur richtigen Hilfe gedacht.</p>
+  <p>Wenn es sich um eine akute Krise handelt oder jemand in Gefahr ist, wende dich bitte an eine ausgebildete Fachkraft:</p>
   <ul>
     <li><a href="https://www.berliner-krisendienst.de">Berliner Krisendienst</a><br/></li>
     <li><a href="https://krisenchat.de/en">Krisenchat</a><br/></li>
