--- a/index-de.html
+++ b/index-de.html
@@ -25,12 +25,8 @@
   <p>Angst, Arbeit, Arbeitslosigkeit, Bedürfnisse/Grenzen, Beziehungen, Familie, Krankheit, Konflikte, Kommunikation, Kreativität, Stress, Tod, Trauer, Trennung, Verlust, usw.</p>
   <hr>
   <h3>Preise</h3>
-  <p>20 bis 60€ pro Sitzung, einkommensabhängig. Erstes Gespräch ist kostenlos.<br/>
-  Während der Weiterbildung arbeite ich unter Anleitung.</p>
-
-
-0-50€ pro Sitzung, einkommensabhängig. Unser erstes Gespräch ist kostenlos.
-Während der Ausbildung arbeite ich unter Supervision.
+  <p>50€ pro Sitzung, flexibel.<br/>Erstes Gespräch ist kostenlos.<br/>
+  Während der Weiterbildung arbeite ich unter Supervision.</p>
   <hr>
   <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
