--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <p>Anxiety, conflict, communication, creativity, death, family, grief, illness, needs/boundaries, loss, relationships, separation, stress, unemployment, work, etc.</p>
   <hr>
   <h3>Fees</h3>
-  <p>20&mdash;60€ per session, income-based. Our first conversation is free.<br/>
+  <p>50€ per session (flexible, just ask).<br/>Our first conversation is free.<br/>
   While in training I work under supervision.</p>
   <hr>
   <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
