--- a/index-de.html
+++ b/index-de.html
@@ -38,7 +38,7 @@
     <li>Gespräch über Dinge, für die man sonst keine Zeit oder keinen Platz hat</li>
   </ul>
   <hr>
-  <p>Ein vertraulicher 1:1-Raum zum Zuhören, Nachdenken und Reflektieren; Gespräche am Telefon oder online.A<p>
+  <p>Ein vertraulicher 1:1-Raum zum Zuhören, Nachdenken und Reflektieren; Gespräche am Telefon oder online.<p>
   <!-- <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
     It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.</p> -->
   <hr>
