Fix header styles

--- a/index-de.html
+++ b/index-de.html
@@ -45,7 +45,7 @@
   <p class="cta">Schreib an <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
   <!--
-  <div class="image-frame cover" style="background-image: url('img/image-54.jpg'); background-position: right;">
+  <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
   </div>
   <h2 id="about">About</h2>
   <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
