Update text, pic

--- a/index.html
+++ b/index.html
@@ -19,37 +19,29 @@
     <h1>Counselling<br/>&mdash;<br/><span class="name">Ant Orant</span></h1>
   </div>
   <img src="img/profile4.jpg" class="profile" />
-  <p>I offer psychological support for individuals, in English or <a href="index-de.html">German</a>, as part of my training in counselling.</p>
+  <h3>Counselling</h3>
+  <p>Psychological support for people experiencing stress, anxiety, depression and loss.<p/>
+  <p>Online or in-person in Berlin; <br/>in English or German.</p>
+  <p>I specialise in helping people navigate relationships, work and career difficulties, and life crises and transitions.</p>
+  <p><!--Anxiety, conflict, communication, creativity, death, family, grief, illness, needs/boundaries, loss, relationships, separation, stress, unemployment, work, etc.--></p>
   <!-- <hr> -->
-  <h3>We can talk about:</h3>
-  <p>Anxiety, conflict, communication, creativity, death, family, grief, illness, needs/boundaries, loss, relationships, separation, stress, unemployment, work, etc.</p>
-  <hr>
   <h3>Fees</h3>
-  <p>50€ per session (flexible, just ask).<br/>Our first conversation is free.<br/>
+  <p>0&mdash;50€ per session (income-based).<br/>
+    Free consultation. Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a>.<br/>
   While in training I work under supervision.</p>
   <hr>
-  <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
-  <hr>
-  <h3>How it can help:</h3>
+  <h3>How counselling can help:</h3>
   <ul>
     <li>Work through a long-term problem</li>
     <li>Talk through a recent experience, get a second opinion</li>
     <li>Take pressure off partners, friends or family</li>
     <li>Talk about something you don't have time or space for elsewhere</li>
   </ul>
-  <hr>
-  <p>A confidential 1:1 space for listening, reflection, and perspective; conversations on the phone or online.<p>
   <p>It's <em>not psychotherapy</em>: we don't diagnose or fix.<br/>
     It's <em>not coaching</em>: it's not goal-oriented &mdash; we work with what is.</p>
   <hr>
   <p class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-  <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
-  </div>
-  <h2 id="about">About</h2>
-  <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
-  <p>After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. I was skeptical about a religious school, but found a practical, systemic-based curriculum, and an open-minded and contemplative environment. My own philosophical attitude is influenced by eastern/ancient thought systems and comparative religion in general.</p>
-  <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
   <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
   <h2 id="approach">Approach</h2>
   <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
@@ -61,9 +53,16 @@
   </ul>
 
   <hr>
-  <p  class="cta">Write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
+  <p  class="cta">Free consultation: write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
   <hr>
-
+  <div class="image-frame" style="background-image: url('img/image-54.jpg'); background-position: right;">
+  </div>
+  <h2 id="about">About</h2>
+  <p>I'm a lifelong student of psychology, philosophy and personal development. As life has happened, I've had to translate that intellectual interest into real emotional and psychological work. Through journalling I became interested in my dreams, which led me to the work of C.G. Jung, and in turn to an interest in psychoanalysis, and depth psychology in general.</p>
+  <p>
+    After completing introductory courses in psychoanalysis and analytical psychology, I decided to join the MA Counselling program at ThH Friedensau. The course integrates systemic, psychodynamic and cognitive-behavioural theories and covers individual, couple, and group counselling.
+  </p>
+  <p>I have a Bachelor's degree in Fine Art, and I've worked in design, technology and music for 17 years, as a team lead, mentor, and teacher. My work involves understanding perspectives, guiding conversations, exploring complex problems and supporting peers. I always found my work with people to be the most rewarding, whether helping clients to identify and reach their goals, or helping colleagues to manage stress, complexity and relationships.</p>
   <div class="image-frame" style="background-image: url('img/image-61.jpg');  background-position: center;"></div>
   <h3>Safety</h3>
   <p>I am not yet an accredited counsellor. While in training I work under supervision. It’s intended as a complement to professional psychotherapy, a more accessible alternative, or a step towards the right help.</p>
