Update approach text

--- a/index.html
+++ b/index.html
@@ -44,13 +44,7 @@
   <hr>
   <div class="image-frame" style="background-image: url('img/image-49.jpg');, background-position: center;"></div>
   <h2 id="approach">Approach</h2>
-  <p>My approach is <em>integrative</em> and <em>person-centred</em>.<br/><em>Integrative</em> in that I work with ideas and techniques from different schools of psychology; <em>person-centred</em> means that the process is guided by you, and we work together to find shared language and models that resonate with you.</p>
-  <p>I work with the following basic principles:</p>
-  <ul>
-    <li>"The talking cure": talking through one's thoughts and feelings, with an interested, objective person, is therapeutic in itself.</li>
-    <li>Growth is painful, and there is no life without suffering, but there is always meaning, value and purpose to be found within.</li>
-    <li>Recognising and integrating the unconscious aspects of our inner life is the key to psychological health.</li>
-  </ul>
+  <p>My approach is <em>person-centred</em> and <em>integrative</em>. The process is yours, and is guided by you, however you are on the day. I work with ideas and techniques from different schools of psychology. My current training is based on systemic and cognitive-behavioural therapies, while my previous studies centre around psychoanalysis and analytical psychology. So my approach starts with a practical attitude towards thoughts, feelings and relationships, acknowledging that symptoms can have roots in unconscious patterns which might present existential or symbolic aspects.</p>
 
   <hr>
   <p  class="cta">Free consultation: write to <a href="mailto:ant@orant.xyz">ant@orant.xyz</a></p>
